# ansible-collection-homelab

./: .ansible-lint  .gitignore  .gitlab-ci.yml  .yamllint.yaml  README.md  galaxy.yml  pyproject.toml  requirements.txt  requirements.yml
plugins/inventory/: terraform_http.py  terraform_local.py
roles/argo/defaults/: main.yaml
roles/argo/meta/: argument_specs.yaml
roles/argo/molecule/default/: converge.yml  create.yml  destroy.yml  verify.yml
roles/argo/molecule/default/terraform/: terraform.tfvars
roles/argo/tasks/: main.yaml
roles/cert_manager/defaults/: main.yaml
roles/cert_manager/meta/: argument_specs.yaml
roles/cert_manager/molecule/default/: converge.yml  verify.yml
roles/cert_manager/molecule/default/terraform/: main.tf
roles/cert_manager/tasks/: main.yaml
roles/helm/defaults/: main.yaml
roles/helm/meta/: argument_specs.yaml
roles/helm/tasks/: main.yaml  setup.yaml
roles/k3s/defaults/: main.yaml
roles/k3s/meta/: argument_specs.yaml
roles/k3s/molecule/default/: converge.yml  molecule.yml  verify.yml
roles/k3s/molecule/default/terraform/: variables.tf  (+2 more)
roles/k3s/tasks/: main.yaml  setup.yaml
roles/observability/defaults/: main.yaml
roles/observability/meta/: argument_specs.yaml  main.yaml
roles/observability/molecule/default/: converge.yml  create.yml  molecule.yml  prepare.yml  verify.yml
roles/observability/tasks/: main.yaml
roles/prometheus/defaults/: main.yaml
roles/prometheus/meta/: argument_specs.yaml
roles/prometheus/molecule/default/: converge.yml  destroy.yml  verify.yml
roles/prometheus/tasks/: main.yaml
(+3 files in other folders)
