[tool.poetry]
name = "ansible-collection-homelab"
version = "1.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.14.1"

[tool.poetry.dev-dependencies]
yamllint = "^1.27.1"
ansible-lint = "^6.5.1"

[tool.poetry.group.dev.dependencies]
molecule = "^4.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
